--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             padding: 0;
             color: white;
-            background-color: black;
+            background-color: #010101;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
